Fixed some problems with RJ-2025-019

--- a/_articles/RJ-2025-019/RJ-2025-019.Rmd
+++ b/_articles/RJ-2025-019/RJ-2025-019.Rmd
@@ -28,7 +28,7 @@ author:
   - Seoul 03063, South Korea
   - |
     [chanmin.kim@skku.edu](chanmin.kim@skku.edu){.uri}
-date: '2025-09-25'
+date: '2025-10-01'
 date_received: '2024-05-24'
 journal:
   firstpage: 176
@@ -83,14 +83,14 @@ variable selection method is that variables that meet the ignorability
 assumption should be chosen. Several criteria need to be met by the
 selected confounders in order to reduce the bias of estimated causal
 effects. Among them, "disjunctive cause
-criterion"[@vanderweele2019principles] requires that the chosen
+criterion" [@vanderweele2019principles] requires that the chosen
 variables be related to exposure and/or outcome. In Figure
 [1](#fig:dag){reference-type="ref" reference="fig:dag"} (a), a
 confounder set $\boldsymbol{X}$ that satisfies the disjunctive cause
 criterion consists of variables that either affect exposure $A$, affect
 outcome $Y$, or simultaneously affect both $A$ and $Y$. A better
 condition than this is "disjunctive cause criterion without
-instruments"[@vanderweele2019principles], which removes the variables
+instruments" [@vanderweele2019principles], which removes the variables
 related to exposure but not directly associated with outcome. An
 instrument, or instrumental variable, is a variable that influences
 exposure $A$ but does not affect outcome $Y$. It is known to amplify
@@ -99,7 +99,7 @@ bias in causal effect estimation when there is an unmeasured confounder
 reference="fig:dag"} (b), if a certain confounder from $\boldsymbol{X}$
 is unmeasured and not adjusted for (i.e., in the presence of an
 unmeasured confounder), conducting adjustment for instrument $Z$ leads
-to additional bias, known as "$Z$-bias\" [@ding2017instrumental].
+to additional bias, known as "$Z$-bias" [@ding2017instrumental].
 Therefore, the best practice is to remove this instrument during the
 covariate adjustment process. However, manually identifying a set of
 confounders that meet these criteria among a large number of potential
@@ -107,44 +107,44 @@ confounders is challenging.
 
 Methods based on data and statistical models for performing such
 confounder selection have recently been proposed. One such method is the
-Bayesian adjustment for confounding (BAC) method proposed by
-[@wang2012bayesian; @lefebvre2014extending], which connects exposure and
+Bayesian adjustment for confounding (BAC) method [proposed by
+@wang2012bayesian; @lefebvre2014extending], which connects exposure and
 outcome models through common variable inclusion indicator variables to
-identify confounders. [@wang2015accounting] later modified the BAC
+identify confounders. @wang2015accounting later modified the BAC
 method to work with generalized linear outcome models.
-[@wilson2014confounder] suggested a method based on decision theory with
+@wilson2014confounder suggested a method based on decision theory with
 a similar goal, which performs well for a variety of sample sizes. In
 terms of selecting relevant covariates for use in propensity score,
-[@shortreed2017outcome] proposed the outcome-adaptive LASSO method. In
-addition, [@haggstrom2018data] proposed a method for identifying the
+@shortreed2017outcome proposed the outcome-adaptive LASSO method. In
+addition, @haggstrom2018data proposed a method for identifying the
 causal structure and estimating the causal effect using a probability
 graphical model.
 
 Despite the advantages of the previously mentioned methods, they each
-have limitations. To address these shortcomings, [@kim2023bnp] proposed
+have limitations. To address these shortcomings, @kim2023bnp proposed
 a novel Bayesian non-parametric model that aims to overcome these
 limitations. They suggested a new method that employs Bayesian additive
-regression trees (BART; [@chipman2010bart]) with a shared prior for the
+regression trees (BART; @chipman2010bart) with a shared prior for the
 selection probabilities, which links the exposure and outcome models.
 This approach allows for the flexibility and precision of a Bayesian
 nonparametric model, while also identifying and integrating covariates
 that are related to both the exposure and outcome into the final
-estimator. [@caron2022shrinkage] similarly applied a sparsity-inducing
+estimator. @caron2022shrinkage similarly applied a sparsity-inducing
 Dirichlet prior to the selection probabilities in the outcome model of
 Bayesian Causal Forest, a variant of BART proposed by
-[@hahn2020bayesian]. However, while their approach focuses on inducing
+@hahn2020bayesian. However, while their approach focuses on inducing
 sparsity among variables used within the trees, our method introduces a
 common prior shared by both the outcome and exposure models to
 facilitate confounder identification. This paper introduces
 [bartcs](https://CRAN.R-project.org/package=bartcs), a new R package
-developed by [@bartcs] that implements the Bayesian additive regression
-trees method for confounder selection proposed by [@kim2023bnp]. The
+developed by @bartcs that implements the Bayesian additive regression
+trees method for confounder selection proposed by @kim2023bnp. The
 package, which is written in C++ and integrated into R via Rcpp for fast
 computation and easy use, can be downloaded from the Comprehensive R
 Archive Network (CRAN) at <https://cran.r-project.org/package=bartcs>.
 Certain sections of the code referred to the
 [BART](https://cran.r-project.org/web/packages/BART/index.html) package
-by [@BART] under the GPL license, with modifications. In particular, the
+[@BART] under the GPL license, with modifications. In particular, the
 development of efficient code involved referencing the existing
 [BART](https://cran.r-project.org/web/packages/BART/index.html) package
 algorithm in following aspects: 1) code related to obtaining residuals
@@ -179,7 +179,7 @@ inferences.
 
   [CovSelHigh](https://cran.r-project.org/package=CovSelHigh) [@CovSelHigh]          R       Confounder selection performed via either Markov/Bayesian networks (model-free selection of confounders).
 
-  [BART](https://cran.r-project.org/package=BART) [@BART]                            C++     Incorporate the Dirichlet sparse prior of [@linero2018bayesian] for variable selection in the BART outcome model. Support various outcome types (categorical, continuous, binary, survival outcome). *This does not primarily focus on confounder selection, but rather variable selection,* and this variable selection functionality is enabled by setting `sparse=TRUE` in `wbart` (continuous outcome) `pbart/lbart` (binary outcome) `mbart/mbart2` (categorical outcome) `surv.bart` (survival outcome) functions.
+  [BART](https://cran.r-project.org/package=BART) [@BART]                            C++     Incorporate the Dirichlet sparse prior of @linero2018bayesian for variable selection in the BART outcome model. Support various outcome types (categorical, continuous, binary, survival outcome). *This does not primarily focus on confounder selection, but rather variable selection,* and this variable selection functionality is enabled by setting `sparse=TRUE` in `wbart` (continuous outcome) `pbart/lbart` (binary outcome) `mbart/mbart2` (categorical outcome) `surv.bart` (survival outcome) functions.
 
   [bcf](https://cran.r-project.org/package=bcf) $^\dagger$ [@hahn2020bayesian]       C++     Specify different BART models for confounding adjustment and heterogeneous effect estimation, and regularizing the treatment effect directly. *This model lacks the ability for both variable selection and confounder selection.* Support continuous outcome.
 
@@ -234,14 +234,14 @@ appropriate level of uncertainty
 [@papadogeorgou2020invited; @oganisian2020invited; @li2023bayesian]. Any
 method based on outcome regression cannot provide accurate estimation in
 the non-overlapping region. Further discussion on this topic is
-available in [@li2023bayesian].
+available in @li2023bayesian.
 
 Another notable aspect of this assumption is that it is untestable.
 Therefore, it is not possible to conduct tests based on the data to
 determine which confounder $X$ satisfies the above assumption. However,
 confounders $\boldsymbol{X}$ that meet the criteria presented in the
 introduction (disjunctive cause criterion or disjunctive cause criterion
-without an instrument; [@vanderweele2019principles]) can be considered a
+without an instrument; @vanderweele2019principles] can be considered a
 minimum basis for a "proper" confounder set. With this strong ignorable
 treatment assignment assumption in place, we can identify the causal
 effect by the following equation of the observable quantities:
@@ -281,13 +281,13 @@ internal nodes that are split based on a "splitting variable" $X_j$ and
 "splitting value" $c$ (Figure [2](#fig:bart){reference-type="ref"
 reference="fig:bart"}). In many papers that use continuous outcome data,
 the outcome variable $y$ is centered. In this case, $\mu_0$ is set to
-$0$. As mentioned in [@sparapani2016nonparametric], when the sample size
+$0$. As mentioned in @sparapani2016nonparametric, when the sample size
 is moderate or larger, centering is not necessarily required due to the
 flexibility of $f$. Proceeding with the assumption that the outcome data
 has also been centered, $\mu_0 = 0$ for the explanation here.
 
 In the Markov Chain Monte Carlo (MCMC) update, Bayesian
-backfitting[@hastie2000bayesian] is utilized within a
+backfitting [@hastie2000bayesian] is utilized within a
 Metropolis-within-Gibbs sampler. This involves fitting each tree in the
 ensemble sequentially, using the residual responses:
 $\mathbf{R}_{-t} : = \mathbf{y} - \sum_{j \neq t} g(\boldsymbol{X}; \mathcal{T}_j, \mathcal{M}_j)$
@@ -298,7 +298,7 @@ alterations:
 
 -   GROW: Choose a terminal node at random, and create two new terminal
     nodes. This process involves randomly selecting a predictor, $X_j$,
-    and its associated "splitting value," $c$, to create the two new
+    and its associated "splitting value", $c$, to create the two new
     terminal nodes.
 
 -   PRUNE: Pick an internal node at random where both children are
@@ -330,7 +330,7 @@ This prior specification, as outlined in Table
 variable selection functionality of the
 [BART](https://cran.r-project.org/package=BART) package. Through this,
 it can be utilized as a Bayesian variable selection method to choose
-important predictors in regression problems. [@kim2023bnp] have adapted
+important predictors in regression problems. @kim2023bnp have adapted
 this method for causal inference, proposing a way to select confounders.
 By specifying a common Dirichlet prior on the selection probabilities of
 the outcome and exposure models, it allows for the selection of
@@ -348,7 +348,7 @@ represented by circles. Terminal nodes, shown in blue, have $\mu$
 values. The outcome estimate $\hat{Y}$ of each observation is calculated
 by adding up the $\mu$ values of the terminal nodes where the
 observation falls within each tree. The method used to split each
-internal node into two different children nodes is the "splitting rule,"
+internal node into two different children nodes is the "splitting rule",
 which consists of a "splitting variable" (i.e., $X_j$) and a "splitting
 value" (i.e., $c$). ](fig/fig1.png){#fig:bart width="100%"
 alt="graphic without alt text"}
@@ -459,13 +459,13 @@ sparsity-inducing prior is applied to
 $\boldsymbol{s}_{12} = (s_1, s_2, \cdots, s_P)$, which is shared among
 three models: one for exposure and two for outcomes.
 
-We use "Bayesian backfitting"[@hastie2000bayesian] to obtain posterior
+We use "Bayesian backfitting" [@hastie2000bayesian] to obtain posterior
 samples for the exposure and outcome models. For the exposure model,
 this involves a Metropolis-within-Gibbs sampler, where we fit each tree
 $\mathcal{T}_t$ iteratively using residual responses :
 $$R_{i,-t} = Z_i - \sum_{j \neq t}g_1(\boldsymbol{X}_i; \mathcal{T}_j, \mathcal{M}_j)$$
 for $i=1, \cdots, N$ where $Z_i$ is a latent variable for the binary
-exposure constructed based on [@albert1993bayesian] as follows
+exposure constructed based on @albert1993bayesian as follows
 $$Z_i \sim \left\{ \begin{array}{ll}
          N\left(f_1(\boldsymbol{X}_i), 1\right)I_{(Z_i  > 0)} & for A_i =1 ;\\
         N\left(f_1(\boldsymbol{X}_i), 1\right)I_{(Z_i  \leq 0)} & for A_i = 0 .\end{array} \right.$$
@@ -530,7 +530,7 @@ on a prior of the form $\alpha/(\alpha+P) \sim \text{Beta}(a_0, b_0)$,
 where $a_0=0.5$ and $b_0=1$ [@linero2018bayesian]. The
 Metropolis-Hastings algorithm is then used to update the parameter. To
 delve deeper into the $\alpha$ prior in high-dimensional data, refer to
-[@BART]. Finally, we update $\boldsymbol{s}_{12}$ using a conjugate
+@BART. Finally, we update $\boldsymbol{s}_{12}$ using a conjugate
 sampling update as follows:
 $\boldsymbol{s}_{12} \sim \mathcal{D}(\alpha/P+n_{1,1}+n_{1,21}+n_{1,20}, \cdots, \alpha/P+n_{P,1}+n_{P,21}+n_{P,20})$,
 where $n_{j,21}$ and $n_{j,20}$ represent the numbers of splits on the
@@ -548,7 +548,7 @@ alt="graphic without alt text"}
 #### Single outcome model
 
 Using two separate outcome models for two exposure levels, as outlined
-in [@bartcause] and [@hahn2020bayesian], can result in biased estimates
+in @bartcause and @hahn2020bayesian, can result in biased estimates
 if there is a lack of common support in confounders. While a single
 outcome model can be a viable alternative, it can be challenging to
 apply a shared sparsity-inducing prior to
@@ -642,7 +642,7 @@ data.
 
 As a simple example of the
 [bartcs](https://CRAN.R-project.org/package=bartcs) package, we use a
-simulated dataset from Scenario 1 in [@kim2023bnp] to illustrate its
+simulated dataset from Scenario 1 in @kim2023bnp to illustrate its
 features. The data-generating model incorporates both the non-linear
 propensity score and outcome models, and serves to evaluate the ability
 to detect 5 true confounding variables out of a huge set of possible
@@ -1134,12 +1134,12 @@ visits from trained providers and their cognitive test scores were
 evaluated at the end of the intervention period. The dataset includes a
 variety of pretreatment variables, including 6 continuous and 19 binary
 covariates. The original IHDP data is generated from a randomized
-experiment setting. However, the IHDP data used by [@bartcause] and
-[@louizos:2017] was manipulated to induce covariate imbalance between
+experiment setting. However, the IHDP data used by @bartcause and
+@louizos:2017 was manipulated to induce covariate imbalance between
 treatment groups by removing a subset of the treated group.
 Specifically, all children with nonwhite mothers were removed from the
 treated group. We utilize a synthesized variant of the IHDP data as
-presented in [@louizos:2017]. This version was created employing the
+presented in @louizos:2017. This version was created employing the
 [NPCI](https://github.com/vdorie/npci) package [@npci] to ascertain the
 true counterfactual values. As seen in Figure
 [7](#fig:ioverlap){reference-type="ref" reference="fig:ioverlap"}, the
@@ -1423,7 +1423,7 @@ especially when $N$ is large, due to its faster computational speed.
 
 Additionally, depending on the number of trees used, a significant
 improvement in computation speed can be observed. It is generally
-suggested to start with 50 trees as a "good starting value,"
+suggested to start with 50 trees as a "good starting value",
 [@kapelner2013bartmachine] so using a smaller number of trees is also
 advised to gain computational advantages in terms of speed. The results
 in this manuscript were obtained using R 4.3.0 on a Mac Studio with a M1
@@ -1605,7 +1605,7 @@ confounder pool, and additional predictors for the outcome model are
 also present within the potential confounder pool. In this scenario, the
 proposed method demonstrated precise average treatment effect (SATE)
 estimation and accurately identified the true confounders. Moreover, in
-the study by [@kim2023bnp], the proposed method exhibited accurate
+the study by @kim2023bnp, the proposed method exhibited accurate
 confounder selection performance and reliable estimation of SATEs even
 in scenarios involving instrumental variables in the data generating
 process. This success is attributed to the satisfaction of the
@@ -1634,9 +1634,9 @@ While not currently integrated into the
 confounder selection method presented here using BART holds potential
 for extension to various data types. For count or categorical outcomes,
 it might be feasible to substitute the proposed outcome model with the
-log-linear BART model suggested by [@murray2021log]. Similarly, for
+log-linear BART model suggested by @murray2021log. Similarly, for
 survival outcomes, the survival BART model proposed by
-[@sparapani2016nonparametric] could serve as the outcome model.
+@sparapani2016nonparametric could serve as the outcome model.
 Exploring the specific computation algorithms for these extensions could
 be a fruitful avenue for future research.
 
@@ -1830,7 +1830,7 @@ Y0    3.257776  3.0882004  3.425323
 
 In the case of the single model, the bias is noticeably smaller. This
 reflects the relative advantage of the single model, as also discussed
-in [@kim2023bnp].
+in @kim2023bnp.
 
 ``` r
 single_fit
