--- a/_articles/RJ-2025-019/yoo-kim.tex
+++ b/_articles/RJ-2025-019/yoo-kim.tex
@@ -13,9 +13,9 @@ This article presents an overview of the bartcs R package, which employs a Bayes
 
 In observational studies, drawing causality often relies on the ignorability assumption \citep{rosenbaum_central_1983} that all confounders are included in the adjustment procedure. Alternative approaches, such as difference-in-differences \citep{abadie2005semiparametric}, still seek to address confounding without relying on ignorability by adopting a different set of assumptions (e.g., the parallel trends assumption). A confounder or confounding variable is a common cause that simultaneously affects both exposure and outcome (Figure \ref{fig:dag} (a)). Two groups with different exposure levels, distinguished by the distribution of the confounding variable, also experience its impact on their respective outcome values. Therefore, to estimate the causal relationship between exposure and outcome, it is crucial to select this common cause in the data and adjust for it. In many recent applications, the number of potential confounders is often enormous, making it difficult to select the optimal set of true confounders among them. In this context, the optimal set is a confounder set with an appropriate level of uncertainty that reduces bias in estimating the final causal effect.
 
-The main distinction between confounder selection and the traditional variable selection method is that variables that meet the ignorability assumption should be chosen. Several criteria need to be met by the selected confounders in order to reduce the bias of estimated causal effects. Among them, ``disjunctive cause criterion''\citep{vanderweele2019principles} requires that the chosen variables be related to exposure and/or outcome. In Figure \ref{fig:dag} (a), a confounder set $\boldsymbol{X}$ that satisfies the disjunctive cause criterion consists of variables that either affect exposure $A$, affect outcome $Y$, or simultaneously affect both $A$ and $Y$. A better condition than this is ``disjunctive cause criterion without instruments''\citep{vanderweele2019principles}, which removes the variables related to exposure but not directly associated with outcome. An instrument, or instrumental variable, is a variable that influences exposure $A$ but does not affect outcome $Y$. It is known to amplify bias in causal effect estimation when there is an unmeasured confounder \citep{myers2011effects}. In Figure \ref{fig:dag} (b), if a certain confounder from $\boldsymbol{X}$ is unmeasured and not adjusted for (i.e., in the presence of an unmeasured confounder), conducting adjustment for instrument $Z$ leads to additional bias, known as ``$Z$-bias" \citep{ding2017instrumental}. Therefore, the best practice is to remove this instrument during the covariate adjustment process. However, manually identifying a set of confounders that meet these criteria among a large number of potential confounders is challenging.
+The main distinction between confounder selection and the traditional variable selection method is that variables that meet the ignorability assumption should be chosen. Several criteria need to be met by the selected confounders in order to reduce the bias of estimated causal effects. Among them, ``disjunctive cause criterion'' \citep{vanderweele2019principles} requires that the chosen variables be related to exposure and/or outcome. In Figure \ref{fig:dag} (a), a confounder set $\boldsymbol{X}$ that satisfies the disjunctive cause criterion consists of variables that either affect exposure $A$, affect outcome $Y$, or simultaneously affect both $A$ and $Y$. A better condition than this is ``disjunctive cause criterion without instruments'' \citep{vanderweele2019principles}, which removes the variables related to exposure but not directly associated with outcome. An instrument, or instrumental variable, is a variable that influences exposure $A$ but does not affect outcome $Y$. It is known to amplify bias in causal effect estimation when there is an unmeasured confounder \citep{myers2011effects}. In Figure \ref{fig:dag} (b), if a certain confounder from $\boldsymbol{X}$ is unmeasured and not adjusted for (i.e., in the presence of an unmeasured confounder), conducting adjustment for instrument $Z$ leads to additional bias, known as ``$Z$-bias'' \citep{ding2017instrumental}. Therefore, the best practice is to remove this instrument during the covariate adjustment process. However, manually identifying a set of confounders that meet these criteria among a large number of potential confounders is challenging.
 
-Methods based on data and statistical models for performing such confounder selection have recently been proposed. One such method is the Bayesian adjustment for confounding (BAC) method proposed by \cite{wang2012bayesian,lefebvre2014extending}, which connects exposure and outcome models through common variable inclusion indicator variables to identify confounders. \cite{wang2015accounting} later modified the BAC method to work with generalized linear outcome models. \cite{wilson2014confounder} suggested a method based on decision theory with a similar goal, which performs well for a variety of sample sizes. In terms of selecting relevant covariates for use in propensity score, \cite{shortreed2017outcome} proposed the outcome-adaptive LASSO method. In addition, \cite{haggstrom2018data} proposed a method for identifying the causal structure and estimating the causal effect using a probability graphical model.
+Methods based on data and statistical models for performing such confounder selection have recently been proposed. One such method is the Bayesian adjustment for confounding (BAC) method \citep[proposed by][]{wang2012bayesian,lefebvre2014extending}, which connects exposure and outcome models through common variable inclusion indicator variables to identify confounders. \cite{wang2015accounting} later modified the BAC method to work with generalized linear outcome models. \cite{wilson2014confounder} suggested a method based on decision theory with a similar goal, which performs well for a variety of sample sizes. In terms of selecting relevant covariates for use in propensity score, \cite{shortreed2017outcome} proposed the outcome-adaptive LASSO method. In addition, \cite{haggstrom2018data} proposed a method for identifying the causal structure and estimating the causal effect using a probability graphical model.
 
 Despite the advantages of the previously mentioned methods, they each have limitations. To address these shortcomings, \cite{kim2023bnp} proposed a novel Bayesian non-parametric model that aims to overcome these limitations. They suggested a new method that employs Bayesian additive regression trees (BART; \cite{chipman2010bart}) with a shared prior for the selection probabilities, which links the exposure and outcome models. This approach allows for the flexibility and precision of a Bayesian nonparametric model, while also identifying and integrating covariates that are related to both the exposure and outcome into the final estimator. \cite{caron2022shrinkage} similarly applied a sparsity-inducing Dirichlet prior to the selection probabilities in the outcome model of Bayesian Causal Forest, a variant of BART proposed by \cite{hahn2020bayesian}. However, while their approach focuses on inducing sparsity among variables used within the trees, our method introduces a common prior shared by both the outcome and exposure models to facilitate confounder identification. This paper introduces \href{https://CRAN.R-project.org/package=bartcs}{bartcs}, a new  R package developed by \cite{bartcs} that implements the Bayesian additive regression trees method for confounder selection proposed by \cite{kim2023bnp}. The package, which is written in C++ and integrated into R via Rcpp for fast computation and easy use, can be downloaded from the Comprehensive R Archive Network (CRAN) at \href{https://cran.r-project.org/package=bartcs}{https://cran.r-project.org/package=bartcs}. Certain sections of the code referred to the \href{https://cran.r-project.org/web/packages/BART/index.html}{BART} package by \cite{BART} under the GPL license, with modifications. In particular, the development of efficient code involved referencing the existing \href{https://cran.r-project.org/web/packages/BART/index.html}{BART} package algorithm in following aspects: 1) code related to obtaining residuals in the Bayesian backfitting process; 2) code dedicated to efficiently searching for variables eligible for splitting when proposing a splitting variable during the tree alteration process; 3) code for calculating the $\mu$ parameter value of leaf nodes; 4) code for obtaining sufficient statistics for all bottom nodes.
 
@@ -88,9 +88,9 @@ y_i &=&  \mu_0+f(\boldsymbol{X}_i) + \epsilon_i \\
 %
 where $\epsilon_i$ follows a normal distribution with mean 0 and variance $\sigma^2$, and $g(\boldsymbol{X}_i; \mathcal{T}_t, \mathcal{M}_t)$ is a function that maps the tree structure and parameters to the response, for all $i=1, \cdots, N$. We specify a BART prior on $f$, comprised primarily of two components: a prior concerning the complexity of each tree, $\mathcal{T}_t$, and a prior concerning its terminal nodes, $\mathcal{M}_t$. For each of $T$ distinct trees, $\mathcal{T}_t$ represents the structure of the $t$-th tree and $\mathcal{M}_t = \{\mu_{t,1}, \mu_{t,2}, \cdots, \mu_{t,n_t}\}$ represents its mean parameters at the terminal nodes. Each tree has internal nodes that are split based on a ``splitting variable'' $X_j$ and ``splitting value'' $c$ (Figure \ref{fig:bart}). In many papers that use continuous outcome data, the outcome variable $y$ is centered. In this case, $\mu_0$ is set to $0$. As mentioned in \cite{sparapani2016nonparametric}, when the sample size is moderate or larger, centering is not necessarily required due to the flexibility of $f$. Proceeding with the assumption that the outcome data has also been centered, $\mu_0 = 0$ for the explanation here.
 
-In the Markov Chain Monte Carlo (MCMC) update, Bayesian backfitting\citep{hastie2000bayesian} is utilized within a Metropolis-within-Gibbs sampler. This involves fitting each tree in the ensemble sequentially, using the residual responses: $\mathbf{R}_{-t} : = \mathbf{y} - \sum_{j \neq t} g(\boldsymbol{X}; \mathcal{T}_j, \mathcal{M}_j)$ where $\mathbf{R}_{-t}$ denotes unexplained outcome residuals for the $t$-th tree. In each iteration of the MCMC update, a new tree structure is proposed by randomly selecting one of three possible tree alterations:
+In the Markov Chain Monte Carlo (MCMC) update, Bayesian backfitting \citep{hastie2000bayesian} is utilized within a Metropolis-within-Gibbs sampler. This involves fitting each tree in the ensemble sequentially, using the residual responses: $\mathbf{R}_{-t} : = \mathbf{y} - \sum_{j \neq t} g(\boldsymbol{X}; \mathcal{T}_j, \mathcal{M}_j)$ where $\mathbf{R}_{-t}$ denotes unexplained outcome residuals for the $t$-th tree. In each iteration of the MCMC update, a new tree structure is proposed by randomly selecting one of three possible tree alterations:
 \begin{itemize}
-\item[] GROW: Choose a terminal node at random, and create two new terminal nodes. This process involves randomly selecting a predictor, $X_j$, and its associated ``splitting value,'' $c$, to create the two new terminal nodes.
+\item[] GROW: Choose a terminal node at random, and create two new terminal nodes. This process involves randomly selecting a predictor, $X_j$, and its associated ``splitting value'', $c$, to create the two new terminal nodes.
 \item[] PRUNE: Pick an internal node at random where both children are terminal nodes (known as a ``singly internal node'' \citep{kapelner2013bartmachine}) and remove both of its children (thus making it a terminal node).
 \item[] CHANGE: Select an internal node at random and modify its splitting variable and value according to the priors.
 \end{itemize}
@@ -100,7 +100,7 @@ Specifically, when using the grow and change alterations, a new covariate is ran
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=0.6\linewidth]{fig/fig1.png}
-\caption{The tree structures consist of $T$ trees, each with nodes represented by circles. Terminal nodes, shown in blue, have $\mu$ values. The outcome estimate $\hat{Y}$ of each observation is calculated by adding up the $\mu$ values of the terminal nodes where the observation falls within each tree. The method used to split each internal node into two different children nodes is the ``splitting rule,'' which consists of a ``splitting variable'' (i.e., $X_j$) and a ``splitting value'' (i.e., $c$).
+\caption{The tree structures consist of $T$ trees, each with nodes represented by circles. Terminal nodes, shown in blue, have $\mu$ values. The outcome estimate $\hat{Y}$ of each observation is calculated by adding up the $\mu$ values of the terminal nodes where the observation falls within each tree. The method used to split each internal node into two different children nodes is the ``splitting rule'', which consists of a ``splitting variable'' (i.e., $X_j$) and a ``splitting value'' (i.e., $c$).
 }\label{fig:bart}
 \end{figure}
 
@@ -142,7 +142,7 @@ However, if there are unmeasured confounders (i.e., if not all true confounders 
 \subsubsection{Separate outcome models}
 For a binary exposure, we separate the outcome model into two distinct sub-models, in order to align the dimensions of the covariates in both the exposure and outcome models (note that the outcome model includes exposure $A$ as an additional covariate if a single outcome model is specified). For Equations~\ref{eq1} and \ref{eq2}, a sparsity-inducing prior is applied to $\boldsymbol{s}_{12} = (s_1, s_2, \cdots, s_P)$, which is shared among three models: one for exposure and two for outcomes. %The resulting update based on this prioris $\boldsymbol{s}_{12} = (s_1, s_2, \cdots, s_P) \sim \mathcal{D}(\alpha/P+n_{11}+n_{121}+n_{120}, \cdots, \alpha/P+n_{P1}+n_{P21}+n_{P20})$, where $n_{j21}$ and $n_{j20}$ represent the numbers of splits on the confounder $X_j$ in two separate outcome models, and $n_{j1}$ represents the number of splits on $X_j$ in the exposure model.
 
-We use ``Bayesian backfitting''\citep{hastie2000bayesian} to obtain posterior samples for the exposure and outcome models. For the exposure model, this involves a Metropolis-within-Gibbs sampler, where we fit each tree $\mathcal{T}_t$ iteratively using residual responses : $$R_{i,-t} = Z_i - \sum_{j \neq t}g_1(\boldsymbol{X}_i; \mathcal{T}_j, \mathcal{M}_j)$$ for $i=1, \cdots, N$ where $Z_i$ is a latent variable for the binary exposure constructed based on \cite{albert1993bayesian} as follows
+We use ``Bayesian backfitting'' \citep{hastie2000bayesian} to obtain posterior samples for the exposure and outcome models. For the exposure model, this involves a Metropolis-within-Gibbs sampler, where we fit each tree $\mathcal{T}_t$ iteratively using residual responses : $$R_{i,-t} = Z_i - \sum_{j \neq t}g_1(\boldsymbol{X}_i; \mathcal{T}_j, \mathcal{M}_j)$$ for $i=1, \cdots, N$ where $Z_i$ is a latent variable for the binary exposure constructed based on \cite{albert1993bayesian} as follows
 \[ Z_i \sim \left\{ \begin{array}{ll}
          N\left(f_1(\boldsymbol{X}_i), 1\right)I_{(Z_i  > 0)} & \mbox{for $A_i =1 $};\\
         N\left(f_1(\boldsymbol{X}_i), 1\right)I_{(Z_i  \leq 0)} & \mbox{for $A_i = 0 $}.\end{array} \right.  \]
@@ -752,7 +752,7 @@ In Figure \ref{fig:speed}, the computational speed of two models, the separate a
 
 For 100 BART trees, the separate models required 8 to 98 seconds (18 to 190 seconds for 200 BART trees) for computation, while the single model took 7 to 86 seconds (14 to 168 seconds for 200 BART trees), depending on the ($N, P$) combination. Both models exhibited similar computational speeds overall, considering the MCMC iterations. However, the single model, which fits two BART models (exposure and one outcome model), was found to be more efficient with slightly smaller biases and mean square errors (MSEs) across various scenarios \citep{kim2023bnp}. Therefore, it is recommended to utilize the single model (\verb|single_bart()| function), especially when $N$ is large, due to its faster computational speed.
 
-Additionally, depending on the number of trees used, a significant improvement in computation speed can be observed. It is generally suggested to start with 50 trees as a ``good starting value,'' \citep{kapelner2013bartmachine} so using a smaller number of trees is also advised to gain computational advantages in terms of speed.
+Additionally, depending on the number of trees used, a significant improvement in computation speed can be observed. It is generally suggested to start with 50 trees as a ``good starting value'', \citep{kapelner2013bartmachine} so using a smaller number of trees is also advised to gain computational advantages in terms of speed.
 The results in this manuscript were obtained using R~4.3.0 on a Mac Studio with
 a M1 chip and 128 GB of memory. \href{https://cran.r-project.org/package=bartcs}{bartcs}~1.2.2 and \href{https://cran.r-project.org/package=bacr}{bacr}~1.0.1 were used for the analysis.
 
